Fix height and overflow issues of Search ID Card
Commit resolves height and overflow issues of Search ID Card

--- a/src/components/search/search.module.scss
+++ b/src/components/search/search.module.scss
@@ -183,14 +183,6 @@
     height: Calc(100% - 90px);
 }
 
-.IDCardTop {
-    height: 45%;
-}
-
-.IDCardBottom {
-    height: 55%;
-}
-
 .IDCardIcon {
     font-size: 25px;
     color: var(--primary);
@@ -233,12 +225,8 @@
     font-size: 15px;
 }
 
-.geoLocationBlock {
-    height: Calc(100% - 60%);
-}
-
 .digitalMediaBlock {
-    height: Calc(100% - 40% - 70px);
+    height: 40%;
 }
 
 .digitalMediaSlider {
